syntax = "proto3";
package types.v1;

import "google/protobuf/timestamp.proto";
import "types/v1/build.proto";

message Pack {
  string id = 1;
  string slug = 2;
  string name = 3;
  string website = 4;
  optional PackBack back = 5;
  optional PackIcon icon = 6;
  optional PackLogo logo = 7;
  bool published = 8;
  bool private = 9;
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
  repeated types.v1.Build builds = 12;
}

message PackBack {
  string id = 1;
  string pack_id = 2;
  string slug = 3;
  string content_type = 4;
  string md5 = 5;
  string path = 6;
  string url = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message PackIcon {
  string id = 1;
  string pack_id = 2;
  string slug = 3;
  string content_type = 4;
  string md5 = 5;
  string path = 6;
  string url = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message PackLogo {
  string id = 1;
  string pack_id = 2;
  string slug = 3;
  string content_type = 4;
  string md5 = 5;
  string path = 6;
  string url = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}
